--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 
     <!-- Qualification Start -->
 <!-- Qualification Start -->
-<<div class="container-fluid py-5" id="qualification">
+```html
+<div class="container-fluid py-5" id="qualification">
     <div class="container">
         <div class="position-relative d-flex align-items-center justify-content-center">
             <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Quality</h1>
@@ -167,59 +168,105 @@
             <div class="col-lg-12">
                 <h3 class="mb-4">My Projects</h3>
                 <div class="border-left border-primary pt-2 pl-4 ml-2">
+
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <a href="https://github.com/dharanishmadesh/WIFI-JAMMER.git">
-                        <h5 class="font-weight-bold mb-1">WiFi Jammer using ESP8266</h5>
+                            <h5 class="font-weight-bold mb-1">WiFi Jammer using ESP8266</h5>
                         </a>
                         <p class="mb-2"><strong>Cyber Security</strong> | <small>(Jun 2023 – Jul 2023)</small></p>
                         <p>Designed a WiFi jammer to identify network vulnerabilities. Achieved a 90% success rate in disrupting targeted wireless networks during testing.</p>
                     </div>
+
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <a href="https://github.com/dharanishmadesh/home_automation-using-cadio.git">
-                        <h5 class="font-weight-bold mb-1">Home Automation using ESP8266 & ESP32</h5>
+                            <h5 class="font-weight-bold mb-1">Home Automation using ESP8266 & ESP32</h5>
                         </a>
                         <p class="mb-2"><strong>IoT</strong> | <small>(Sep 2023 – Oct 2023)</small></p>
                         <p>Developed a home automation system to control and monitor appliances remotely. Utilized ESP ZeroCode for firmware generation, avoiding manual coding.</p>
                     </div>
+
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <a href="https://github.com/dharanishmadesh/ESS-SYSTEM.git">
-                        <h5 class="font-weight-bold mb-1">Energy-Efficient System using ESP32</h5>
+                            <h5 class="font-weight-bold mb-1">Energy-Efficient System using ESP32</h5>
                         </a>
                         <p class="mb-2"><strong>IoT</strong> | <small>(Jan 2024 – Feb 2024)</small></p>
                         <p>Built a smart energy meter for real-time energy consumption monitoring. Reduced lag in monitoring by 30%, improving efficiency.</p>
                     </div>
+
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <a href="https://github.com/dharanishmadesh/ObstacleAvoidingCar-main.git">
-                        <h5 class="font-weight-bold mb-1">Obstacle Avoiding Car</h5>
+                            <h5 class="font-weight-bold mb-1">Obstacle Avoiding Car</h5>
                         </a>
                         <p class="mb-2"><strong>Robotics</strong> | <small>(Apr 2024 – May 2024)</small></p>
                         <p>Designed an autonomous car with obstacle detection using sensors and microcontroller programming. Created a software architecture to process sensor data and guide movement.</p>
                     </div>
+
                     <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <a href="https://github.com/dharanishmadesh/Portfolio_Webserver.git">
-                        <h5 class="font-weight-bold mb-1">ESP32 Web Server</h5>
+                            <h5 class="font-weight-bold mb-1">ESP32 Web Server</h5>
                         </a>
                         <p class="mb-2"><strong>Web Hosting</strong> | <small>(Aug 2024 – Sep 2024)</small></p>
                         <p>Hosted a personal portfolio website using ESP32’s built-in Wi-Fi and web server features. Demonstrated dynamic content, showcasing skills, projects, and contact information.</p>
                     </div>
-                    <div class="position-relative">
+
+                    <div class="position-relative mb-4">
                         <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                         <a href="https://github.com/dharanishmadesh/ESP32-Gemini-main.git">
-                        <h5 class="font-weight-bold mb-1">ESP32-Gemini Chatbot</h5>
+                            <h5 class="font-weight-bold mb-1">ESP32-Gemini Chatbot</h5>
                         </a>
                         <p class="mb-2"><strong>API</strong> | <small>(Nov 2024 – Dec 2024)</small></p>
                         <p>Developed a chatbot using ESP32 and integrated it with Google APIs for enhanced functionality. Enabled real-time conversations and automated responses for user assistance.</p>
                     </div>
+
+                    <!-- Added AI & Data Science + Advanced IoT Projects -->
+
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <a href="https://github.com/dharanishmadesh/movie_recommender_django">
+                            <h5 class="font-weight-bold mb-1">Movie Recommendation Web App (Django)</h5>
+                        </a>
+                        <p class="mb-2"><strong>AI & Data Science</strong> | <small>(Oct 2025 – Nov 2025)</small></p>
+                        <p>Built a Django-based movie recommendation system combining content-based and collaborative filtering to deliver personalized movie suggestions through an interactive web interface.</p>
+                    </div>
+
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <a href="https://github.com/dharanishmadesh/Hybrid-Question-Answering-System-Using-Predefined-Data-and-T5-Model-with-Gradio-Deployment">
+                            <h5 class="font-weight-bold mb-1">Hybrid Question Answering System (T5 + Gradio)</h5>
+                        </a>
+                        <p class="mb-2"><strong>AI & NLP</strong> | <small>(Feb 2025 – Mar 2025)</small></p>
+                        <p>Implemented a hybrid QA system that retrieves predefined answers from a knowledge base and uses a T5 transformer model with a Gradio UI when no direct answer is found.</p>
+                    </div>
+
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <a href="https://github.com/dharanishmadesh/Project_on_HealthCare">
+                            <h5 class="font-weight-bold mb-1">Diabetes Prediction using Machine Learning</h5>
+                        </a>
+                        <p class="mb-2"><strong>Healthcare Analytics</strong> | <small>(Mar 2025 – Apr 2025)</small></p>
+                        <p>Developed a diabetes prediction pipeline using KNN imputation and Logistic Regression, with evaluation using accuracy, precision, recall, and ROC curves on healthcare data.</p>
+                    </div>
+
+                    <div class="position-relative mb-4">
+                        <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                        <a href="https://github.com/dharanishmadesh/License-Plate-Recognition-using-ESP32-CAM">
+                            <h5 class="font-weight-bold mb-1">ESP32-CAM Vehicle Number Plate Recognition</h5>
+                        </a>
+                        <p class="mb-2"><strong>Computer Vision & IoT</strong> | <small>(Jan 2025 – Mar 2025)</small></p>
+                        <p>Created an ESP32-CAM based system that captures vehicle images, sends them securely to a cloud ML service for number plate recognition, and displays results on an OLED display.</p>
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
 </div>
+```
 
     <!-- Qualification End -->
 
